Attempting to fix the misalignment on the index.php page.

--- a/resources/css/phaser-styles.css
+++ b/resources/css/phaser-styles.css
@@ -3,5 +3,4 @@
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 150px;
 }
